[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DeathReboot.gd" type="Script" id=1]
[ext_resource path="res://Assets/game_over.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 2 )

[node name="DeathReboot" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="RebootLabel0" type="Label" parent="."]
margin_left = -113.0
margin_top = -49.0
margin_right = 11.0
margin_bottom = -5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Reboot in"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RebootLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = -47.0
margin_right = 114.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RebootTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="RebootTimer" to="." method="_on_RebootTimer_timeout"]
